# datamove

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-alma8  Dockerfile-rpm  README.md  datamove.example.toml
.github/workflows/: build-release.yaml  build.yaml  cd.yml  check.yaml  ci.yml  clippy.yaml  fmt.yaml  generate-lockfile.yaml  outdated.yaml  test.yaml  verify-project.yaml
.sqlx/: query-002b45477f44eb75b6e3c59dd54d227a893525bfb22178535695be28f68a5d56.json  query-04c195e9ed0b3edf3f911300d2d9c2fd56e698e41eb7f004f49483d6018e40e9.json  query-04f51293fd4d1ee7188aff4a0d10078499c88f3d7343cf398de648e575c0580c.json  query-064d264064132482a886d3b289b77ab7f119ce7ccbd06f3df5e1fdc5c4b549fa.json  query-0b74292662201ee1106dacc618089b89409525ac7a5c4adf3d19d57f1f7dde86.json  query-130fe278498f6b203638e7fd5df83577f5d0c9b96f42934941f0311e7f3a3a38.json  query-1331ec46de31c5d52c8a13000df0009b80160097d378d90f6d0204560b2708dd.json  query-1716c165bb7e199becfcf419905150029557b91dcfacf89d5e0041f10ce6f019.json  query-1dea7bc2183857b351a2db4100b4a71bdd7b502a212a6c67a2437626a2dfe53e.json  query-264e83f8c85cd8296fe21dbe6da9f71bbcc51fbe360e2dc4f0f01d25a07651c8.json  query-2762bc9fc4c9175b755475705739f92d1fdf88a2c222e12ad1d085661ebceeaa.json  query-27822fff4e0630c4955fec81184b322da7cbd88e1d7110972d0b8797d9539697.json  query-2ad06a4b5a93c60adde03ad329cf3572d056c6f9106922ab091955e0a609caab.json  query-2b11a6efc86f5dba347ae14e8dbfd00ea389f625f76881c30082e6379389d0bc.json  query-39dcc061a3647cf7ffc5f96057312d6f40c44a2e198a22fe50c9f68b99c7a1c7.json  query-3bbbad9b82a79e48cc43426a8c300ce6f7238a26f2a3294d42d93098dac3873e.json  query-4c115cb1a58503f8ddda0c5e583926f6666df4cb6d35b69247cb7374d257dc41.json  query-5453a13374cb04b6ca70c35c61a84c7160f940926158b7b5253e6344486ba098.json  query-5991fd382189fef9979122d325de85df31449485742eecc9fc6ef65fb45cc7a1.json  query-5a746a1ff79d6eaec7ccfeec82982a48b7cabea97bf1ec235430def7793f505c.json  query-619d41c97d25de99b44ceda632980c8df0f8e92c20d7d240c964d934e62372fe.json  query-63361cdae81b25d733c28090f812481b4ca9b0912c6dab8ae0b8f1eace3b96a9.json  query-6532db0844b443a65467756788719d9a82d3bc3f815813b4b270bf2a31509652.json  query-77b7f7359bd0d47d1d55043179ea83d961086fa4d53250774fe645214dd4a2bb.json  query-7c6ab3163b8adece1a31dadf826137b14720aa9a523b74e292868d1945f765fb.json  query-845b8e67cf4a7fdc590bf0ddca80bcef2a04a40766cf62ca44e1ff33a1d928f0.json  query-c1d6034410a4048d74252ca8889264059c7836799ba4957efc044d67e0e32c75.json  query-da0cd4ed64427d1363da34d6232934a1fa37060f42c488ad9e9cabca5e07fac1.json  query-e196e22831f567573e42d1f8883ab674d1a799bbe66f0bbd2be9bec27886091b.json  query-f5d648cdca63ff455b5b5f928af8c9c791ae68ff05bfa15683825d14424b808d.json  query-fc74f908268c02ab93429f313348e60ba7ca39a6b9ea9c81ecb13e585bf96ddd.json
deploy/: create_serial_number.sql  update_serial_number.py
doc/: jadeite-disk-archiver.txt  vscode-extension.md  warehouse_check.md
etc/: closeArchiveDisk.tera  createArchiveDisk.tera  datamove.example.toml
src/: adhoc.rs  config.rs  error.rs  lib.rs  metadata.rs  sps.rs  status.rs
src/adhoc/: utils.rs
src/metadata/: sps.rs
src/sps/: context.rs  database.rs  email.rs  jade_db.rs  models.rs  process.rs  schema.rs  utils.rs
src/sps/jade_db/: repo.rs  service.rs  sqlx.rs  utils.rs
src/sps/jade_db/repo/: disk.rs  disk_label.rs  file_pair.rs  host.rs
src/sps/jade_db/service/: disk.rs  disk_label.rs  file_pair.rs  host.rs
src/sps/jade_db/sqlx/: models.rs
src/sps/process/: disk_archiver.rs
src/sps/utils/: crypto.rs  hardware_metadata.rs  lsblk.rs
src/status/: net.rs  sps.rs
tests/data/: closeArchiveDisk.tera  createArchiveDisk.tera  test_dataStreams.json  test_diskArchives.json  test_tera_template_close_archive.txt  test_tera_template_create_archive.txt
tools/: build-docker  build-docker-alma8  build-docker-debian13  cargo-build-with-database-url  cleanup-virtual-archival-disks  docker-mysql-shell  generate-rpm  init-docker-mysql  prepare-sqlx  run-docker-warehouse_check  setup-dev-env  setup-virtual-archival-disks  shutdown-disk-archiver  start-code  status-disk-archiver
