# Cargo.toml

[package]
name = "wipac_datamove"
authors = ["Patrick Meade <pmeade@icecube.wisc.edu>"]
version = "0.5.0"
repository = "https://github.com/WIPACrepo/datamove"
description = "Modern data movement components"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["erased-json"] }
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.8"
fs2 = "0.4.3"
hostname = "0.4.2"
lettre = "0.11.19"
num-format = "0.4.4"
num-traits = "0.2.19"
rand = "0.9.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["bigdecimal", "chrono", "mysql", "runtime-tokio", "time"] }
tera = "1.20.1"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11+spec-1.1.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
filetime = "0.2.27"

[package.metadata.generate-rpm]
release = "1.el8"
name = "jade-datamove"
license = "UNLICENSED"
assets = [
    { source = "etc/*", dest = "/mnt/data/jade/etc", mode = "644", user = "jade", group = "jade" },
    { source = "target/release/disk_archiver", dest = "/usr/local/jade/bin/datamove/disk_archiver", mode = "755" },
    { source = "target/release/workbench", dest = "/usr/local/jade/bin/datamove/workbench", mode = "755" },
]
pre_install_script = """
mkdir -p /mnt/data/jade/disk_work
chown jade:jade /mnt/data/jade/disk_work
mkdir -p /usr/local/jade/bin/datamove
"""

[package.metadata.generate-rpm.requires]
openssl = "*"
